# pip_packaging

example_package/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
example_package/notebooks/: demo.ipynb
example_package/src/: my_functions.py
example_package/src/example_package/: my_classes.py
mergefast/: setup.py  test.py  use_package.ipynb
mergefast/mergefast/: core.py
mergefast/mergefast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
my_package/: MANIFEST.in  README.md  setup.py  use_package.ipynb
my_package/my_package/: __init__.py.py  my_function.py
packaging_tutorial/: MANIFEST.in  README.md  pyproject.toml  setup.py
packaging_tutorial/src/example_package_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt
