[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["example_package_YOUR_USERNAME_HERE"]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = "README.md" }
requires-python = ">=3.11"
classifiers = { file = "classifiers.txt" }

[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
description = "A simple Python package that includes a function to greet someone and a class representing a person."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = ["numpy", "pandas"]
