#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Yishai Arieli", email="yishai.arieli@mail.huji.ac.il" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    #"numpy",
    #"pandas==2.2.3",
    #"numba"

]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]



[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

